Edit report color

--- a/account_reports/account_report_view/report/annual_trial_balance/annual_trial_balance.html
+++ b/account_reports/account_report_view/report/annual_trial_balance/annual_trial_balance.html
@@ -24,17 +24,17 @@
 	
 	.print-format th.red,
     .print-format td.red{
-        background-color: #3BAB5A !important;
+        background-color: #BFCAD0 !important;
         color: #171717 !important;
     }
     .print-format th.green,
     .print-format td.green{
-        background-color: #ECF87F !important;
+        background-color: #BFCAD0 !important;
         color: #171717 !important;
     }
     .print-format th.orange,
     .print-format td.orange{
-        background-color: #97D49B !important;
+        background-color: #738580 !important;
         color: #171717 !important;
     }
 	.print-format.landscape{
