Change profit and loss report

--- a/account_reports/account_report_view/report/annual_trial_balance/annual_trial_balance.html
+++ b/account_reports/account_report_view/report/annual_trial_balance/annual_trial_balance.html
@@ -13,6 +13,7 @@
         font-optical-sizing: auto!important;
         font: weight 800px !important;;
         font-style: normal!important;
+		direction: rtl!important;
     }
 	.financial-statements-important td {
 		font-weight: bold;
@@ -24,17 +25,18 @@
 	
 	.print-format th.red,
     .print-format td.red{
-        background-color: #BFCAD0 !important;
+        background-color: #003B73 !important;
         color: #171717 !important;
+		color: antiquewhite!important;
     }
     .print-format th.green,
     .print-format td.green{
-        background-color: #BFCAD0 !important;
+        background-color: #BFD7ED !important;
         color: #171717 !important;
     }
     .print-format th.orange,
     .print-format td.orange{
-        background-color: #738580 !important;
+        background-color: #60A3D9 !important;
         color: #171717 !important;
     }
 	.print-format.landscape{
