--- a/account_reports/account_report_view/report/profit_and_loss/11.html
+++ b/account_reports/account_report_view/report/profit_and_loss/11.html
@@ -1,3 +1,6 @@
+<!-- {% include "accounts/report/financial_statements.html" %} -->
+
+
 {%
 	var report_columns = report.get_columns_for_print();
 	report_columns = columns || report_columns.filter(col => !col.hidden);
@@ -58,90 +61,7 @@
 <h2 class="text-center" style="color: #222 !important">{%= __("Balance Sheet As in") %} - {{filters.period_start_date}} :- {{filters.period_end_date}}  </h2>
 </h2>
 <div class="content">
-
-	<!------- Assets ------->
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th colspan="100" class="text-center  head-table">{%= __("Assets")%}</th>
-			</tr>
-			<tr>
-				<th class="text-center asset-bg">{%= __("No.") %}</th>
-				<th class="text-center asset-bg">{%= __("Account") %}</th>
-				{% for (let i=1, l=report_columns.length; i<l; i++) { %}
-					<th class="text-right" style="background-color: #BFD7ED !important; color: #222 !important;">{%= report_columns[i].label %}</th>
-				{% } %}
-			</tr>
-		</thead>
-		<tbody>
-			{% 
-				var ass_count = 0; 
-				var lib_count = 0;
-			
-			%}
-			{% for(let j=0, k=data.length; j<k; j++) { %}
-			{%
-				var row = data[j];
-				var row_class = data[j].parent_account ? "" : "financial-statements-important lib-bg";
-				row_class += data[j].account_name ? "" : " financial-statements-blank-row";
-			%}
-			{% if row.root_type == 'asset' %}
-			{% if row.account %}
-				{% ass_count = ass_count + 1 %}
-			{% endif %}
-			{% endif %}
-			{% if row.root_type == 'liability' %}
-			{% if row.account %}
-				{% lib_count = lib_count + 1 %}
-			{% endif %}
-			{% endif %}
-			{% } %}
-			{% var diff =  lib_count - ass_count; %}
-			{% for(let j=0, k=data.length; j<k; j++) { %}
-				{%
-					var row = data[j];
-					var row_class = data[j].parent_account ? "" : "financial-statements-important asset-bg";
-					row_class += data[j].account_name ? "" : " financial-statements-blank-row";
-				%}
-				{% if row.root_type == 'asset' %}
-					{% if row.account %}
-					{% if (row.account_name == "Total Asset (Debit)")  %}
-					{% for(let x=0, y=diff; x<y; x++ ) { %}
-					<tr>
-						<td colspan="4"><span>-</span></td>
-						
-					</tr>
-					{% } %}
-				
-					{%endif%}
-						<tr class="{%= row_class %}">
-							<td class="text-center">{{j+1}}</td>
-							<td class="text-center bold">
-								<span>{%= row.account_name %}</span>
-							</td>
-							{% for(let i=1, l=report_columns.length; i<l; i++) { %}
-								<td class="text-right bold">
-									{% const fieldname = report_columns[i].fieldname; %}
-									{% if (!is_null(row[fieldname])) { %}
-										{% if (row.total) < 0 %}
-											<span class="bold" style="color: #970C10;">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
-										{% else %}
-											<span class="bold">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
-										{% endif %}
-									{% } %}
-								</td>
-							{% } %}
-						</tr>
-					{% endif %}
-				{% endif %}
-			{% } %}
-
-		</tbody>
-	</table>
-
-
-	
-	<!------- Liabilities ------->
+	<!------- expense ------->
 	<table class="table table-bordered">
 		<thead>
 			<tr>
@@ -156,8 +76,8 @@
 			</tr>
 		</thead>
 		{% 
-			var ass_count = 0; 
-			var lib_count = 0;
+			var inc_count = 0; 
+			var exp_count = 0;
 		
 		%}
 		{% for(let j=0, k=data.length; j<k; j++) { %}
@@ -166,22 +86,22 @@
 			var row_class = data[j].parent_account ? "" : "financial-statements-important lib-bg";
 			row_class += data[j].account_name ? "" : " financial-statements-blank-row";
 		%}
-		{% if row.root_type == 'asset' %}
+		{% if row.root_type == 'income' %}
 		{% if row.account %}
-			{% ass_count = ass_count + 1 %}
+			{% inc_count = inc_count + 1 %}
 		{% endif %}
 		{% endif %}
-		{% if row.root_type == 'liability' %}
+		{% if row.root_type == 'expense' %}
 		{% if row.account %}
-			{% lib_count = lib_count + 1 %}
+			{% exp_count = exp_count + 1 %}
 		{% endif %}
 		{% endif %}
 		{% } %}
-		{% var diff = ass_count - lib_count; %}
+		{% var diff = inc_count - exp_count; %}
 		<tbody>
 			{% 
-				var ass_count = 0; 
-				var lib_count = 0;
+				var inc_count = 0; 
+				var exp_count = 0;
 			
 			%}
 			{% for(let j=0, k=data.length; j<k; j++) { %}
@@ -192,9 +112,9 @@
 				%}
 				{{(row.is_total_row)}}
 
-				{% if row.root_type == 'liability' %}
+				{% if row.root_type == 'expense' %}
 					{% if row.account %}
-						{% if (row.account_name == "Total Liability (Credit)")  %}
+						{% if (row.account_name == "Total Expense (Credit)")  %}
 						{% for(let x=0, y=diff; x<y; x++ ) { %}
 						<tr>
 							<td colspan="4"><span>-</span></td>
@@ -228,6 +148,58 @@
 		</tbody>
 	</table>
 
+	<!------- Assets ------->
+	<table class="table table-bordered">
+		<thead>
+			<tr>
+				<th colspan="100" class="text-center  head-table">{%= __("Income")%}</th>
+			</tr>
+			<tr>
+				<th class="text-center asset-bg">{%= __("No.") %}</th>
+				<th class="text-center asset-bg">{%= __("Account") %}</th>
+				{% for (let i=1, l=report_columns.length; i<l; i++) { %}
+					<th class="text-right" style="background-color: #BFD7ED !important; color: #222 !important;">{%= report_columns[i].label %}</th>
+				{% } %}
+			</tr>
+		</thead>
+		<tbody>
+			{% 
+				var ass2_count = 0; 
+				var lib2_count = 0;
+			
+			%}
+			{% for(let j=0, k=data.length; j<k; j++) { %}
+				{%
+					var row = data[j];
+					var row_class = data[j].parent_account ? "" : "financial-statements-important asset-bg";
+					row_class += data[j].account_name ? "" : " financial-statements-blank-row";
+				%}
+				{% if row.root_type == 'income' %}
+					{% if row.account %}
+						<tr class="{%= row_class %}">
+							<td class="text-center">{{j+1}}</td>
+							<td class="text-center bold">
+								<span>{%= row.account_name %}</span>
+							</td>
+							{% for(let i=1, l=report_columns.length; i<l; i++) { %}
+								<td class="text-right bold">
+									{% const fieldname = report_columns[i].fieldname; %}
+									{% if (!is_null(row[fieldname])) { %}
+										{% if (row.total) < 0 %}
+											<span class="bold" style="color: #970C10;">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
+										{% else %}
+											<span class="bold">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
+										{% endif %}
+									{% } %}
+								</td>
+							{% } %}
+						</tr>
+					{% endif %}
+				{% endif %}
+			{% } %}
+
+		</tbody>
+	</table>
 </div>
 <p class="text-right text-muted">
 	Printed On {%= frappe.datetime.str_to_user(frappe.datetime.get_datetime_as_string()) %}
