--- a/account_reports/account_report_view/report/profit_and_loss/profit_and_loss.html
+++ b/account_reports/account_report_view/report/profit_and_loss/profit_and_loss.html
@@ -21,10 +21,11 @@
         font-style: normal!important;
         direction: rtl!important;
     }
-    .financial-statements-important td {
+    .financial-statements-important td , .financial-statements-important {
 		font-weight: bold;
-		background-color: #003B73 !important;
-		color: #BFD7ED !important;	}
+		background-color: #9ccbf7 !important;
+		color: #020303 !important;
+    	}
 	table tbody tr {
 		height: 30px !important;
 		max-height: 30px !important;
@@ -55,17 +56,87 @@
 	.head-table{
 		background-color: #003B73 !important;
 		color: #BFD7ED !important;
+        font-size: 18px!important;
 	}
+    .vertical-txt{
+        writing-mode: vertical-lr;
+        text-orientation: upright;
+        
+    }
+	.Profitt-loss{
+		background-color: #003B73 !important;
+		color: #BFD7ED !important;
+		text-align: center !important;
+		font-size: 20px !important;
+		font-weight: bold !important;
+		direction: ltr !important;
+}
 </style>
 <hr>
-<h2 class="text-center" style="color: #222 !important">{%= __("Balance Sheet As in") %} - {{filters.period_start_date}} :- {{filters.period_end_date}}  </h2>
+<h2 class="text-center" style="color: #222 !important">{%= __("Income statement  As in") %} - {{filters.period_start_date}} :- {{filters.period_end_date}}  </h2>
 </h2>
 <div class="content">
-	<!------- expense ------->
+
+    {% 
+        var inc_total = 0; 
+        var exp_total = 0;
+    
+    %}
+
 	<table class="table table-bordered">
+        	<!------- Icome ------->
+
 		<thead>
 			<tr>
-				<th colspan="100" class="text-center  head-table">{%= __("Liabilities")%}</th>
+				<th colspan="100" class="text-center  head-table">{%= __("Income")%}</th>
+			</tr>
+			<tr>
+				<th class="text-center asset-bg">{%= __("No.") %}</th>
+				<th class="text-center asset-bg">{%= __("Account") %}</th>
+				{% for (let i=1, l=report_columns.length; i<l; i++) { %}
+					<th class="text-right" style="background-color: #BFD7ED !important; color: #222 !important;">{%= report_columns[i].label %}</th>
+				{% } %}
+
+			</tr>
+		</thead>
+		<tbody>
+
+			{% for(let j=0, k=data.length; j<k; j++) { %}
+				{%
+					var row = data[j];
+					var row_class = data[j].parent_account ? "" : "financial-statements-important asset-bg";
+					row_class += data[j].account_name ? "" : " financial-statements-blank-row";
+				%}
+				{% if row.root_type == 'income' %}
+					{% if row.account %}
+						<tr class="{%= row_class %}">
+							<td class="text-center">{{j+1}}</td>
+							<td class="text-center bold">
+								<span>{%= row.account_name %}</span>
+							</td>
+							{% for(let i=1, l=report_columns.length; i<l; i++) { %}
+								<td class="text-right bold">
+									{% const fieldname = report_columns[i].fieldname; %}
+									{% if (!is_null(row[fieldname])) { %}
+										{% if (row.total) < 0 %}
+											<span class="bold" style="color: #970C10;">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
+										{% else %}
+											<span class="bold">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
+                                            {% var inc_total =  row.total %}
+										{% endif %}
+									{% } %}
+								</td>
+							{% } %}
+						</tr>
+					{% endif %}
+				{% endif %}
+			{% } %}
+
+		</tbody>
+        <!-- Expences table -->
+        <thead>
+			<tr>
+				<th colspan="100" class="text-center  head-table">{%= __("Expense")%}</th>
 			</tr>
 			<tr>
 				<th class="text-center lib-bg">{%= __("No.") %}</th>
@@ -75,35 +146,8 @@
 				{% } %}
 			</tr>
 		</thead>
-		{% 
-			var inc_count = 0; 
-			var exp_count = 0;
-		
-		%}
-		{% for(let j=0, k=data.length; j<k; j++) { %}
-		{%
-			var row = data[j];
-			var row_class = data[j].parent_account ? "" : "financial-statements-important lib-bg";
-			row_class += data[j].account_name ? "" : " financial-statements-blank-row";
-		%}
-		{% if row.root_type == 'income' %}
-		{% if row.account %}
-			{% inc_count = inc_count + 1 %}
-		{% endif %}
-		{% endif %}
-		{% if row.root_type == 'expense' %}
-		{% if row.account %}
-			{% exp_count = exp_count + 1 %}
-		{% endif %}
-		{% endif %}
-		{% } %}
-		{% var diff = inc_count - exp_count; %}
 		<tbody>
-			{% 
-				var inc_count = 0; 
-				var exp_count = 0;
-			
-			%}
+
 			{% for(let j=0, k=data.length; j<k; j++) { %}
 				{%
 					var row = data[j];
@@ -136,6 +180,8 @@
 											<span class="bold" style="color: #970C10;">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
 										{% else %}
 											<span class="bold">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
+                                            {%  var exp_total = row.total %}
+
 										{% endif %}
 									{% } %}
 								</td>
@@ -144,61 +190,16 @@
 					{% endif %}
 				{% endif %}
 			{% } %}
-
+            <tr  >
+                <th colspan="2"  class="Profitt-loss">
+                  {%= __("Profitt/Loss ")%}
+                </th>
+                <th colspan="3" class="Profitt-loss" >
+					{%= format_currency(inc_total - exp_total)%}
+                </th>
+            </tr>
 		</tbody>
-	</table>
 
-	<!------- Assets ------->
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th colspan="100" class="text-center  head-table">{%= __("Income")%}</th>
-			</tr>
-			<tr>
-				<th class="text-center asset-bg">{%= __("No.") %}</th>
-				<th class="text-center asset-bg">{%= __("Account") %}</th>
-				{% for (let i=1, l=report_columns.length; i<l; i++) { %}
-					<th class="text-right" style="background-color: #BFD7ED !important; color: #222 !important;">{%= report_columns[i].label %}</th>
-				{% } %}
-			</tr>
-		</thead>
-		<tbody>
-			{% 
-				var ass2_count = 0; 
-				var lib2_count = 0;
-			
-			%}
-			{% for(let j=0, k=data.length; j<k; j++) { %}
-				{%
-					var row = data[j];
-					var row_class = data[j].parent_account ? "" : "financial-statements-important asset-bg";
-					row_class += data[j].account_name ? "" : " financial-statements-blank-row";
-				%}
-				{% if row.root_type == 'income' %}
-					{% if row.account %}
-						<tr class="{%= row_class %}">
-							<td class="text-center">{{j+1}}</td>
-							<td class="text-center bold">
-								<span>{%= row.account_name %}</span>
-							</td>
-							{% for(let i=1, l=report_columns.length; i<l; i++) { %}
-								<td class="text-right bold">
-									{% const fieldname = report_columns[i].fieldname; %}
-									{% if (!is_null(row[fieldname])) { %}
-										{% if (row.total) < 0 %}
-											<span class="bold" style="color: #970C10;">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
-										{% else %}
-											<span class="bold">{%= frappe.format(row[fieldname], report_columns[i], {}, row) %}</span>
-										{% endif %}
-									{% } %}
-								</td>
-							{% } %}
-						</tr>
-					{% endif %}
-				{% endif %}
-			{% } %}
-
-		</tbody>
 	</table>
 </div>
 <p class="text-right text-muted">
